--- a/wordle/wordle.cabal
+++ b/wordle/wordle.cabal
@@ -17,5 +17,8 @@ executable wordle
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-  other-modules:       Words
+  build-depends:       base >= 4.7 && < 5, containers
+
+
+  other-modules:       Words,
+                       Wordle
