--- a/wordle/wordle.cabal
+++ b/wordle/wordle.cabal
@@ -17,5 +17,6 @@ executable wordle
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       containers, text
   other-modules:       Words, TheGame, Wordle
