--- a/wordle/wordle.cabal
+++ b/wordle/wordle.cabal
@@ -18,5 +18,5 @@ executable wordle
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
-                       containers, text
+                       containers, text, pqueue
   other-modules:       Words, TheGame, Wordle
