--- a/wordle/wordle.cabal
+++ b/wordle/wordle.cabal
@@ -19,4 +19,4 @@ executable wordle
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        containers, text, pqueue
-  other-modules:       Words, TheGame, Wordle
+  other-modules:       Words, Entropy, Wordle
